--- a/Web/Pages/Shared/_ThemeGcwuFooter.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwuFooter.cshtml
@@ -25,7 +25,7 @@
         <div class="brand">
             <div class="container">
                 <div class="row">
-                    <nav class="col-md-9 col-lg-10 ftr-urlt-lnk">
+                    <nav class="col-md-6 col-md-8 ftr-urlt-lnk">
                         <h2 class="wb-inv">About this site</h2>
                         <ul>
                             <li><a href="https://www.canada.ca/en/social.html">Social media</a></li>
@@ -36,7 +36,9 @@
                         </ul>
                     </nav>
                     <div class="col-xs-6 visible-sm visible-xs tofpg"> <a href="#wb-cont">Top of page <span class="glyphicon glyphicon-chevron-up"></span></a> </div>
-                    <div class="col-xs-6 col-md-3 col-lg-2 text-right"> <img src="~/themes-dist-8.0.1-gcweb/GCWeb/assets/wmms-blk.svg" alt="Symbol of the Government of Canada"> </div>
+                    <div class="col-xs-6 col-md-2" style="float:right;">
+                        <object type="image/svg+xml" tabindex="-1" role="img" data="~/themes-dist-8.0.1-gcweb/GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+                    </div>
                 </div>
             </div>
         </div>
@@ -47,46 +49,46 @@
 else
 {
 
-    <footer id="wb-info" class="mrgn-tp-xl">
-        <div class="landscape">
-            <nav class="container wb-navcurr" aria-labelledby="aboutGov">
-                <h2 class="wb-inv" id="aboutGov">À propos du gouvernement</h2>
-                <ul class="list-unstyled colcount-sm-2 colcount-md-3">
-                    <li><a href="/fr/Contact">Contactez-nous</a></li>
-                    <li><a href="https://www.canada.ca/fr/gouvernement/min.html">Ministères et organismes</a></li>
-                    <li><a href="https://www.canada.ca/fr/gouvernement/fonctionpublique.html">Fonction publique et force militaire</a></li>
-                    <li><a href="https://www.canada.ca/fr/nouvelles.html">Nouvelles</a></li>
-                    <li><a href="https://www.canada.ca/fr/gouvernement/systeme/lois.html">Traités, lois et règlements</a></li>
-                    <li><a href="https://www.canada.ca/fr/transparence/rapports.html">Rapports à l'échelle du gouvernement</a></li>
-                    <li><a href="http://pm.gc.ca/fra">Premier ministre</a></li>
-                    <li><a href="https://www.canada.ca/fr/gouvernement/systeme.html">À propos du gouvernement</a></li>
-                    <li><a href="http://ouvert.canada.ca/">Gouvernement ouvert</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="brand">
-            <div class="container">
-                <div class="row">
-                    <nav class="col-md-9 col-lg-10 ftr-urlt-lnk" aria-labelledby="aboutSite">
-                        <h2 class="wb-inv" id="aboutSite">À propos du site</h2>
-                        <ul>
-                            <li><a href="https://www.canada.ca/fr/sociaux.html">Médias sociaux</a></li>
-                            <li><a href="https://www.canada.ca/fr/mobile.html">Applications mobiles</a></li>
-                            <li><a href="https://www.canada.ca/fr/gouvernement/a-propos.html">À propos de Canada.ca</a></li>
-                            <li><a href="https://www.canada.ca/fr/transparence/avis.html">Avis</a></li>
-                            <li><a href="https://www.canada.ca/fr/transparence/confidentialite.html">Confidentialité</a></li>
-                        </ul>
-                    </nav>
-                    <div class="col-xs-6 visible-sm visible-xs tofpg">
-                        <a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a>
-                    </div>
-                    <div id="StdIssueWasHere2" class="col-xs-6 col-md-2 text-right">
-                        <img src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/wet-boew/assets/wmms-blk.svg" alt="Symbole du gouvernement du Canada">
-                    </div>
+<footer id="wb-info" class="mrgn-tp-xl">
+    <div class="landscape">
+        <nav class="container wb-navcurr" aria-labelledby="aboutGov">
+            <h2 class="wb-inv" id="aboutGov">À propos du gouvernement</h2>
+            <ul class="list-unstyled colcount-sm-2 colcount-md-3">
+                <li><a href="/fr/Contact">Contactez-nous</a></li>
+                <li><a href="https://www.canada.ca/fr/gouvernement/min.html">Ministères et organismes</a></li>
+                <li><a href="https://www.canada.ca/fr/gouvernement/fonctionpublique.html">Fonction publique et force militaire</a></li>
+                <li><a href="https://www.canada.ca/fr/nouvelles.html">Nouvelles</a></li>
+                <li><a href="https://www.canada.ca/fr/gouvernement/systeme/lois.html">Traités, lois et règlements</a></li>
+                <li><a href="https://www.canada.ca/fr/transparence/rapports.html">Rapports à l'échelle du gouvernement</a></li>
+                <li><a href="http://pm.gc.ca/fra">Premier ministre</a></li>
+                <li><a href="https://www.canada.ca/fr/gouvernement/systeme.html">À propos du gouvernement</a></li>
+                <li><a href="http://ouvert.canada.ca/">Gouvernement ouvert</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="brand">
+        <div class="container">
+            <div class="row">
+                <nav class="col-md-7 col-md-8 ftr-urlt-lnk" aria-labelledby="À propos de ce site">
+                    <h2 class="wb-inv" id="aboutSite">À propos du site</h2>
+                    <ul>
+                        <li><a href="https://www.canada.ca/fr/sociaux.html">Médias sociaux</a></li>
+                        <li><a href="https://www.canada.ca/fr/mobile.html">Applications mobiles</a></li>
+                        <li><a href="https://www.canada.ca/fr/gouvernement/a-propos.html">À propos de Canada.ca</a></li>
+                        <li><a href="https://www.canada.ca/fr/transparence/avis.html">Avis</a></li>
+                        <li><a href="https://www.canada.ca/fr/transparence/confidentialite.html">Confidentialité</a></li>
+                    </ul>
+                </nav>
+                <div class="col-xs-3 visible-sm visible-xs tofpg">
+                    <a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a>
+                </div>
+                <div class="col-xs-3 col-md-2" style="float:right;">
+                    <object type="image/svg+xml" tabindex="-1" role="img" data="~/themes-dist-8.0.1-gcweb/GCWeb/assets/wmms-blk.svg" aria-label="Symbole du gouvernement du Canada"></object>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 
 }
 
