--- a/Web/Pages/Student/HighSchool/Seagoing/Index.cshtml
+++ b/Web/Pages/Student/HighSchool/Seagoing/Index.cshtml
@@ -32,7 +32,7 @@
             <a style="text-decoration:none" href="@Localizer["link"]" target="_blank">
                 <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                     <div class="img-container">
-                        <figcaption class="caption text-center"><h3 class="mrgn-tp-0">@Localizer["ccgcollege"]</h3></figcaption>
+                        <h4 class="mrgn-tp-0 mrgn-bttm-sm">@Localizer["ccgcollege"] <span style="color:#000; font-size:12px;" class="glyphicon glyphicon-new-window"></span></h4>
                         <img src="~/img/Student/CCGCollege.jpg" alt="@Localizer["PhotoCollege"]" class="img-responsive center" />
                     </div>
                 </figure>
