--- a/Web/Pages/Student/HighSchool/Shoreside/Index.cshtml
+++ b/Web/Pages/Student/HighSchool/Shoreside/Index.cshtml
@@ -36,7 +36,7 @@
                     <a href="@Localizer["link"]" target="_blank" class="btn btn-default btn-block well hght-inhrt">
                         <div class="row">
                             <div class="col-sm-12 col-xs-7">
-                                <p class="mrgn-bttm-sm"><strong class="h4">@Localizer["ccgcollege"]</strong></p>
+                                <h4 class="mrgn-tp-0 mrgn-bttm-sm">@Localizer["ccgcollege"] <span style="color:#000; font-size:12px;" class="glyphicon glyphicon-new-window"></span></h4>
                             </div>
                             <div class="col-sm-12 col-xs-5">
                                 <img src="~/img/Student/CCGCollege.jpg" alt="@Localizer["PhotoCollege"]" class="img-responsive center-block" />
